Collab list: Fix lines being too long on mobile

--- a/src/main/webapp/WEB-INF/classes/resources/css/collab-list.css
+++ b/src/main/webapp/WEB-INF/classes/resources/css/collab-list.css
@@ -16,3 +16,7 @@
 .contact {
     margin-top: 10px;
 }
+
+.collab-name, .description a {
+    overflow-wrap: anywhere;
+}
